<resources>
    <string name="app_name">Test2</string>
    <string name="name">无线局域网</string>
    <string name="button_on">关闭WiFi</string>
    <string name="button_off">打开WiFi</string>
    <string name="wifi1">imooc-office</string>
    <string name="wifi2">imooc-meeting</string>
    <string name="wifi3">imooc-vistor</string>
    <string name="describe">显示WiFi图片</string>
    <string name="date">当前时间：</string>

</resources>
